[gd_scene load_steps=9 format=2]

[ext_resource path="res://pictures/space-farmer.png" type="Texture" id=1]
[ext_resource path="res://Scripts/farmer.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/HealthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://sound/Hit_01.wav" type="AudioStream" id=4]
[ext_resource path="res://pictures/space-farmer-left.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "right",
"speed": 0.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "left",
"speed": 0.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 38.6118, 57.8181 )

[sub_resource type="CircleShape2D" id=3]
radius = 400.0

[node name="Farmer" type="KinematicBody2D"]
script = ExtResource( 2 )
max_hp = 100

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
animation = "left"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="HealthUI" parent="." instance=ExtResource( 3 )]
margin_left = -48.9202
margin_top = -76.9343
margin_right = -48.9202
margin_bottom = -76.9343

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 1.0

[node name="Knockback" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DetectionRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource( 3 )

[node name="WalkTimer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="finished" from="DeathSound" to="." method="_on_DeathSound_finished"]
[connection signal="timeout" from="Knockback" to="." method="_on_Knockback_timeout"]
[connection signal="body_entered" from="DetectionRange" to="." method="_on_DetectionRange_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_DetectionRange_body_exited"]
[connection signal="timeout" from="WalkTimer" to="." method="_on_WalkTimer_timeout"]
